# eclipse-opensovd_opensovd-core

./: .pre-commit-config.yaml  Cargo.toml  pyproject.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  first-interaction.yaml
opensovd-cli/gateway/src/: cors.rs  main.rs
opensovd-cli/mcp/src/: main.rs
opensovd-client/src/: data.rs  lib.rs
opensovd-client/src/entities/: app.rs  component.rs
opensovd-client/tests/: data.rs
opensovd-e2e/: README.md  pyproject.toml
opensovd-e2e/src/opensovd_e2e/: __init__.py  plugin.py  process.py
opensovd-e2e/tests/: conftest.py  test_plugin.py
opensovd-extra/src/auth/: rego.rs
scripts/: mkcerts.sh
tests/: conftest.py  fixtures.py
tests/bruno/: conftest.py
tests/opensovd-gateway/: conftest.py  test_signals.py
tests/opensovd-gateway/cli/: conftest.py
tests/opensovd-mcp/: conftest.py
